# Progetto-calcolatori-elettronici

./: AUTHORS.txt  CMakeLists.txt  README.md  main.c  makefile
esercitazione/: CMakeLists.txt  main.c
scheduler/: Scheduler.c  Scheduler.h
strutture/: lista_istruzione.c  lista_istruzione.h  lista_task.c  lista_task.h
utility/: FCFS.c  FCFS.h  lettura_terminale.c  lettura_terminale.h  round_robin.c  round_robin.h  scrittura_file.c  scrittura_file.h  struttura_thread.c  struttura_thread.h
